--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.11.2
+======
+
+  - FIX: bank id was not set if there was no last.json file
+  - FIX: serial_init() called without args
+
 0.11.1
 ======
 
