--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+0.11.3
+======
+
+  - FIX: login required when opening social section
+  - NEW: adds supported answers from controller many arguments and few arguments
+  - FIX: clipmeter command
+
 0.11.2
 ======
 
@@ -15,7 +22,7 @@
 
   - NEW: rotary sensibility in adressing
   - NEW: bank addressings
-	
+
 0.10.5
 ======
 
@@ -24,7 +31,7 @@
 0.10.4
 ======
 
-  - NEW: auto detects the controller tty 
+  - NEW: auto detects the controller tty
   - FIX: pedalboard keep state
 
 0.10.3
