--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
-0.17.3
+0.17.4
 ======
 
+  - FIX: remove bank addressing when session is reset
   - FIX: loading pedalboard over existing effects
 
 0.17.2
