--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.18.2
+======
+
+  - Removed links and filter options that were not working
+  - Date and time in pedalboards feed
+
 0.18.1
 ======
 
