--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+0.19
+====
+
+  - Spaces shown in addressings, instead of underscores
+  - Enumeration can be addressed to footswitch
+  - Plugin controls may be modified by horizontal mouse drag too
+  - Bank addressings hidden from interface
+
 0.18.4
 ======
 
