--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+0.26.1
+======
+
+  - Bank addressing layout
+  - FIX: Cable positioning is not lost when pedalboard or window are resized
+  - FIX: Pedalboard screenshot was recently broken
+
 0.26
 ====
 
