--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.28.10
+=======
+
+  - fix: internal addressing structures were not being removed when effect instance was removed
+
 0.28.9
 ======
 
