--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.30.1
+======
+
+  - fix feed layout when description is small
+  - fix: trigger button will now be seen for half second when pressed
+
 0.30
 ====
 
