--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.99.7
+======
+  - new: jack_cpu_load support
+
 0.99.6
 ======
   - fix: initial_state command wasn't sending the pedalboards uids
